<resources>
    <string name="app_name">Lab3</string>
    <string name="customer_id">Customer ID</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="month_of_birth">Month of birth</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="sign_up">SIGN UP</string>
</resources>
