<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_customer_id"
            android:text="@string/customer_id"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_customer_id"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="2"
            android:layout_toRightOf="@id/tv_customer_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_password"
            android:text="@string/password"
            android:textColor="@color/black"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="2"
            android:layout_toRightOf="@id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_phone_number"
            android:text="@string/phone_number"
            android:textColor="@color/black"/>

        <EditText
            android:inputType="phone"
            android:id="@+id/et_phone_number"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="2"
            android:layout_toRightOf="@id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_date_of_birth"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_date_of_birth"
            android:inputType="numberDecimal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_month_of_birth"
            android:text="@string/month_of_birth"
            android:textColor="@color/black"/>

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/et_month_of_birth"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/tv_year_of_birth"
            android:text="@string/year_of_birth"
            android:textColor="@color/black"/>

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/et_year_of_birth"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
